@@ -1,5 +1,8 @@
 Changes for APR 1.2.0
 
+   *) Support APR_SO_SNDBUF and APR_SO_RCVBUF on Windows.  PR 32177.
+      [Sim <sgobbi datamanagement.it>, Jeff Trawick]
+
    *) Fix apr_table_overlap()'s handling of tables allocated from
       different pools.  [Joe Schaefer <joe+gmane@sunstarsys.com>]
 
